Semi-fix for opening the menu when a cookiebar is visible on mobile

--- a/public/theme/europeana-cope/source/scss/modules/_navigation.scss
+++ b/public/theme/europeana-cope/source/scss/modules/_navigation.scss
@@ -123,6 +123,10 @@ nav.main-menu {
         // height: 100vh; // No height: fucks with stcky-kit js
     }
 
+    body.show-cookiebar & {
+        top: 289px; // magic numer - room for cookiebar on mobile
+    }
+
     body.homepage &,
     body.body-no-menu &{
         // no menu on homepage
